some alignemnt and crash fixes

--- a/src/Components/CreateJobCard/Styles.css
+++ b/src/Components/CreateJobCard/Styles.css
@@ -13,8 +13,8 @@
   flex-direction: row;
   width: 100%; 
   padding: 25px;
-  /* margin-top: 10px;
-  margin-bottom: 10px; */
+  /* margin-top: 100px; */
+  /* margin-bottom: 10px; */
 }
 
 .descContainer{
